# FPW60

./: .replit  pyproject.toml  sandbox.py
B1/B1.5/: script.py
B2.5/: 2.5.5.py
B2/B2.5/: 2.5.11.py
B3/B3.2/: 3.2.4.py
B3/B3.4/: 3.4.1.py  3.4.3.py
B3/B3.5/: B3.5.2.py  B3.5.3.py  B3.5.4.py  B3.5.5.py  Example 3.py  test 3.py  test.py  test2.py
B3/B3.6/: B3.6.1.py
B4/: 4.2.1.py  func.py
B5/: B5.6 tic-tac Ракова main (2).py  talk python.py  tic-tac-toe.py
C4/: 4.6_linked_list.py
C_OOP/: .replit
C_OOP/C1/C1.6/: creating_method.py
C_OOP/C2/: battleship.py  battleship2.py  zakutei.py
C_OOP/C4/: 4.5.7_binary_tree_DFS.py  4.7_binary_search.py  4.7_linear_search.py  4.8.5.py  4.8.7.py  4.8a_naive_sort.py  4.8b_selection_sort.py  binary_tree.py
C_OOP/C5/: 5.2a_requests_API.py  5.2b_requests_json_to_list.py  5.2c_requests_json_to_dict.py  5.2d_post.py  5.3a_python_bot.py  5.4.5.py  5.4a_lxml_parser.py  5.4b_beatiful_soup4.py  5.5a_redis_setup.py  5.5b_save_dict.py  5.5c_delete.py  Welcome to Python.org.html
C_OOP/C5/Conversion_bot/: api_testing.py  app.py  config.py  extensions.py  utils.py  weather.py  weather_class.py
C_OOP/C5/Conversion_bot/Cleaned_up_and_sent/: config.py  extensions.py
C_OOP/C5/Conversion_bot_solution/added_buttons/: config.py  extensions.py  main.py  test.py
C_OOP/C5/crypto_bot/: app.py  config.py
C_OOP/C_Async.io/: async_api.py  async_api_working.py
С_OOP/: .replit
С_OOP/C2/: battleship.py  battleship2.py  getters_setters.py  sandbox.py  solution.py
