[tool.poetry]
name = "repl_python3_SF-FPW60-1"
version = "0.1.0"
description = ""
authors = ["LlamaUnicorn <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
lxml = "^4.8.0"
redis = "^4.1.4"
telebot = "^0.0.4"
pyTelegramBotAPI = "^4.4.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
